Added front and back cards with images as well as flipperview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CreateNotecards"
-            android:screenOrientation="landscape"
-            android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".MainActivity"
+        <activity android:name=".FlipperViewFrontBackFlash"
+            android:parentActivityName=".CardsForGivenTopic"
+            android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".CardsForGivenTopic"
+            android:parentActivityName=".CreateNotecards"
+            android:screenOrientation="landscape"/>
+        <activity
+            android:name=".CreateNotecards"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
